--- a/docs/blog/posts/2024-09-19_coalesce2024.md
+++ b/docs/blog/posts/2024-09-19_coalesce2024.md
@@ -11,11 +11,13 @@ categories:
 The Recce team will be joining [Coalesce 2024](https://coalesce.getdbt.com/) in Las Vegas! Meet our founder, [CL Kao](https://www.linkedin.com/in/clkao/), and product manager, [Karen Hsieh](https://www.linkedin.com/in/karenhsieh/), who has also been hosting the Taipei dbt meetups. As a company focused on helping data teams prevent bad merges and improve data quality, we believe Coalesce is the perfect venue to connect with fellow data professionals, share insights, and gain fresh perspectives.
 
 <figure markdown="span">
-  ![Firesidechat banner](../assets/images/coalesce-2024-event-preview.png)
+  ![Firesidechat banner](../assets/images/coalesce-2024/coalesce-2024-event-preview.png)
   <figcaption>Coalesce 2024</figcaption>
 </figure>
 
 At Recce, our mission is to transform the data PR review process, ensuring that data pipelines not only run smoothly but also deliver accurate, validated results. We believe that data should be correct, collaborative, and continuously improved. Coalesce 2024 offers an ideal platform for these crucial conversations, gathering experts across the field to discuss the future of data management. Whether it’s gaining new insights into best practices or forging valuable partnerships, Coalesce is where we aim to make an impact.
+
+<!-- more -->
 
 This journey didn’t start overnight. The idea for Recce was born from deep conversations with data practitioners at Coalesce 2023 in San Diego. At the time, CL Kao was working on PipeRider, a data impact assessment tool for dbt data projects.
 
@@ -29,7 +31,7 @@ The Data Renegade Happy Hour: Where Data Power Meets Happy Hour
 Join the team from Recce and [Tobiko](https://tobikodata.com/), [Cube](https://cube.dev/), [Paradime.io](https://www.paradime.io/), [Datacoves](https://datacoves.com/), and [Steep](https://steep.app/) on **October 8th** at the Data Renegade Happy Hour.
 
 <figure markdown="span">
-  ![Firesidechat banner](../assets/images/the-data-renegade_happy-hour.jpg)
+  ![Firesidechat banner](../assets/images/coalesce-2024/the-data-renegade_happy-hour.jpg)
   <figcaption>Data Renegade Happy Hour</figcaption>
 </figure>
 
