added RSVP button

--- a/docs/blog/posts/2024-09-19_coalesce2024.md
+++ b/docs/blog/posts/2024-09-19_coalesce2024.md
@@ -38,6 +38,10 @@ Join the team from Recce and [Tobiko](https://tobikodata.com/), [Cube](https://c
 It’s set to be a fun-filled evening where you can connect with industry pros over witty banter, enjoy data-themed cocktails, and be amazed by world-class magic from international champion John George.
 Don’t miss the perfect blend of insights and entertainment.
  [**[RSVP Soon](https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration)**], space is limited!
+
+
+[RSVP Today!](https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration){ .md-button .md-button--primary }
+
 ------
 We are looking forward to engaging with the data community on some of the most pressing challenges facing teams today, including how to prevent bad merges, validate results, and perform robust impact analysis. Every data practitioner who’s ever created or reviewed a PR knows the frustration of spot checks and incomplete data analysis.
 
