--- a/docs/blog/posts/2024-09-19_coalesce2024.md
+++ b/docs/blog/posts/2024-09-19_coalesce2024.md
@@ -25,9 +25,12 @@ It became clear from the conversations that the need for a more comprehensive so
 
 [The Analytics Development Lifecycle (ADLC) white paper](https://www.getdbt.com/resources/guides/the-analytics-development-lifecycle) sets the stage for the discussions at Coalesce, and we’re eager to dive in. Trends like DataOps, automation, collaboration and data quality resonates deeply with Recce’s goals. While modern data practices draw significant inspiration from software engineering, data has its own unique challenges. One such challenge is that simply applying software methods directly to data isn’t always effective. Data review, for example, requires more than just SQL code reviews; it demands a thorough examination of the actual data.
 
-But it’s not just all work—Coalesce also gives us the chance to let loose and connect in a more relaxed setting. That’s why we’re teaming up with some of the brightest minds in data to co-host a special event:
-------
-The Data Renegade Happy Hour: Where Data Power Meets Happy Hour
+
+
+## The Data Renegade Happy Hour: Where Data Power Meets Happy Hour
+
+*It’s not just all work! Coalesce also gives us the chance to let loose and connect in a more relaxed setting. That’s why we’re teaming up with some of the brightest minds in data to co-host a special event:*
+
 Join the team from Recce and [Tobiko](https://tobikodata.com/), [Cube](https://cube.dev/), [Paradime.io](https://www.paradime.io/), [Datacoves](https://datacoves.com/), and [Steep](https://steep.app/) on **October 8th** at the Data Renegade Happy Hour.
 
 <figure markdown="span">
