add subtitles and some udpate

--- a/docs/blog/posts/2024-09-19_coalesce2024.md
+++ b/docs/blog/posts/2024-09-19_coalesce2024.md
@@ -1,5 +1,5 @@
 ---
-title: ‘Meet Recce at Coalesce 2024 and The Data Renegade Happy Hour’
+title: 'Meet Recce at Coalesce 2024 and The Data Renegade Happy Hour'
 date: 2024-09-19
 slug: meet-recce-at-coalesce-2024-and-the-data-renegate-happy-hour
 description: >
@@ -19,13 +19,12 @@ At Recce, our mission is to transform the data PR review process, ensuring that 
 
 <!-- more -->
 
+## Coalesce provides invaluable insights
 This journey didn’t start overnight. The idea for Recce was born from deep conversations with data practitioners at Coalesce 2023 in San Diego. At the time, CL Kao was working on PipeRider, a data impact assessment tool for dbt data projects.
 
 It became clear from the conversations that the need for a more comprehensive solution—something beyond data comparisons and observability—was critical. From those learnings, CL pivoted PipeRider into what is now Recce, focused on improving the entire data PR review process. Coalesce 2023 provided invaluable insights, and this year, we’re returning with an even stronger vision.
 
 [The Analytics Development Lifecycle (ADLC) white paper](https://www.getdbt.com/resources/guides/the-analytics-development-lifecycle) sets the stage for the discussions at Coalesce, and we’re eager to dive in. Trends like DataOps, automation, collaboration and data quality resonates deeply with Recce’s goals. While modern data practices draw significant inspiration from software engineering, data has its own unique challenges. One such challenge is that simply applying software methods directly to data isn’t always effective. Data review, for example, requires more than just SQL code reviews; it demands a thorough examination of the actual data.
-
-
 
 ## The Data Renegade Happy Hour: Where Data Power Meets Happy Hour
 
@@ -40,12 +39,12 @@ Join the team from Recce and [Tobiko](https://tobikodata.com/), [Cube](https://c
 
 It’s set to be a fun-filled evening where you can connect with industry pros over witty banter, enjoy data-themed cocktails, and be amazed by world-class magic from international champion John George.
 Don’t miss the perfect blend of insights and entertainment.
- [**[RSVP Soon](https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration)**], space is limited!
+ **[RSVP Soon](https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration), space is limited!**
 
 
 [RSVP Today!](https://cube.registration.goldcast.io/events/09364877-fe00-4531-8923-8d80c8614ff1?utm_source=partner&utm_medium=&UTM_Publisher=&leadsource=&utm_campaign=&campaign_code=&campaignid=&utm_content=Recce#Registration){ .md-button .md-button--primary }
 
-------
+## Chat with us
 We are looking forward to engaging with the data community on some of the most pressing challenges facing teams today, including how to prevent bad merges, validate results, and perform robust impact analysis. Every data practitioner who’s ever created or reviewed a PR knows the frustration of spot checks and incomplete data analysis.
 
 We’re also curious to understand what’s holding teams back from addressing these issues. Why do 74% of business stakeholders report revenue loss due to poor data quality, yet many data teams still struggle to prioritize improvements? Everyone talks about the need for high-quality data, but not everyone is taking action. We want to hear how different industries, company sizes, and data teams approach these challenges and discuss how Recce can play a role in solving them—or even understand why Recce might not be the right fit in some cases.
