update coalesce image

--- a/docs/blog/posts/2024-09-19_coalesce2024.md
+++ b/docs/blog/posts/2024-09-19_coalesce2024.md
@@ -11,8 +11,8 @@ categories:
 The Recce team will be joining [Coalesce 2024](https://coalesce.getdbt.com/) in Las Vegas! Meet our founder, [CL Kao](https://www.linkedin.com/in/clkao/), and product manager, [Karen Hsieh](https://www.linkedin.com/in/karenhsieh/), who has also been hosting the Taipei dbt meetups. As a company focused on helping data teams prevent bad merges and improve data quality, we believe Coalesce is the perfect venue to connect with fellow data professionals, share insights, and gain fresh perspectives.
 
 <figure markdown="span">
-  ![Firesidechat banner](../assets/images/coalesce-2024/coalesce-2024-event-preview.png)
-  <figcaption>Coalesce 2024</figcaption>
+  ![Firesidechat banner](../assets/images/coalesce-2024/coalesce-2024-attending.png)
+  <figcaption>We are attending Coalesce 2024</figcaption>
 </figure>
 
 At Recce, our mission is to transform the data PR review process, ensuring that data pipelines not only run smoothly but also deliver accurate, validated results. We believe that data should be correct, collaborative, and continuously improved. Coalesce 2024 offers an ideal platform for these crucial conversations, gathering experts across the field to discuss the future of data management. Whether it’s gaining new insights into best practices or forging valuable partnerships, Coalesce is where we aim to make an impact.
