add data renegades banner

--- a/docs/blog/posts/2025-03-26_datacouncil2025.md
+++ b/docs/blog/posts/2025-03-26_datacouncil2025.md
@@ -35,7 +35,10 @@ Kick off the week with short, fun, and thought-provoking talks. Then grab a drin
 
 
 ### Tuesday: Data Renegades — Break the Rules, Build the Future
-
+<figure markdown="span">
+  ![Data Renegades Banner](../assets/images/datacouncil-2025/datarenagades.png)
+  <figcaption>Data Renegades</figcaption>
+</figure>
 A casual happy hour with bold conversations, lessons learned, and good company. Co-hosted with [Tobiko Data](https://tobikodata.com/), [Datacoves](https://datacoves.com/), and [Bauplan](https://www.bauplanlabs.com/), this is your chance to connect, unwind, and trade ideas with fellow rebels in data.
 
 📅 Date: Tue 22nd April 2025, 7-10 PM
